# waymore

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py  urlscan_crawler.py  waymore.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
tests/: test_import.py
waymore/: __init__.py  waymore.py
